--- a/To-DoList/project/index.html
+++ b/To-DoList/project/index.html
@@ -16,7 +16,7 @@
         <div class="row">
                 
                 <div class="col-12">
-                    <h1> To-Do List DevFreaksBr </h1>
+                    <h1> To-Do List</h1>
                     <form>
 
                         <input type="text" name="task" id='task' placeholder="Novo Item..." />
